# blifparser

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: e2e.yml  linter.yml  unittests.yml
blifparser/: __init__.py  __main__.py  _version.py  blifparser.py  graph.py  utils.py
blifparser/keywords/: __init__.py  fsm.py  generic.py  subfiles.py
tests/: test_utils.py
tests/e2e/: test_comparatori.py  test_datapath.py  test_fsm.py
tests/keywords/: test_fsm.py  test_generic.py  test_subfiles.py
