[metadata]
name = blifparser
version = 2.0.0
url = https://github.com/mario33881/blifparser
author = Zenaro Stefano (mario33881)
author_email = mariortgasd@hotmail.com
description = A simple BLIF parser
long_description = file: README.md
long_description_content_type = text/markdown
keywords = SIS, BLIF, parser, development
license = MIT
license_files = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: Unix
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows

[options]
python_requires = >=3.7
packages = find:
install_requires =
    networkx==2.6.3    # networkx 2.6.3 is the last version that supports python 3.7
    matplotlib==3.7.0  # 3.6 gives "'_AxesStack' object is not callable" error with networkx 2.6

[options.entry_points]
console_scripts =
    blifparser = blifparser.blifparser:main

[options.packages.find]
where=.
include=blifparser*
exclude=tests*

